@@ -1,8 +1,11 @@
 # vi: ts=4 expandtab
 #
 #    Copyright (C) 2013 Yahoo! Inc.
+#    Copyright (C) 2014 Canonical, Ltd
 #
 #    Author: Joshua Harlow <harlowja@yahoo-inc.com>
+#    Author: Dustin Kirkland <kirkland@ubuntu.com>
+#    Author: Scott Moser <scott.moser@canonical.com>
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License version 3, as
@@ -20,9 +23,11 @@ import base64
 from StringIO import StringIO
 
 from cloudinit.settings import PER_INSTANCE
+from cloudinit import log as logging
 from cloudinit import util
 
 frequency = PER_INSTANCE
+LOG = logging.getLogger(__name__)
 
 
 def _decode(data, encoding=None):
@@ -38,24 +43,48 @@ def _decode(data, encoding=None):
         raise IOError("Unknown random_seed encoding: %s" % (encoding))
 
 
-def handle(name, cfg, cloud, log, _args):
-    if not cfg or "random_seed" not in cfg:
-        log.debug(("Skipping module named %s, "
-                   "no 'random_seed' configuration found"), name)
+def handle_random_seed_command(command, required):
+    if not command and required:
+        raise ValueError("no command found but required=true")
+    elif not command:
+        LOG.debug("no command provided")
         return
 
-    my_cfg = cfg['random_seed']
-    seed_path = my_cfg.get('file', '/dev/urandom')
-    seed_buf = StringIO()
-    seed_buf.write(_decode(my_cfg.get('data', ''),
-                           encoding=my_cfg.get('encoding')))
+    cmd = command[0]
+    if not util.which(cmd):
+        if required:
+            raise ValueError("command '%s' not found but required=true", cmd)
+        else:
+            LOG.debug("command '%s' not found for seed_command", cmd)
+            return
+    util.subp(command)
 
+
+def handle(name, cfg, cloud, log, _args):
+    mycfg = cfg.get('random_seed', {})
+    seed_path = mycfg.get('file', '/dev/urandom')
+    seed_data = mycfg.get('data', '')
+
+    seed_buf = StringIO()
+    if seed_data:
+        seed_buf.write(_decode(seed_data, encoding=mycfg.get('encoding')))
+
+    # 'random_seed' is set up by Azure datasource, and comes already in
+    # openstack meta_data.json
     metadata = cloud.datasource.metadata
     if metadata and 'random_seed' in metadata:
         seed_buf.write(metadata['random_seed'])
 
     seed_data = seed_buf.getvalue()
     if len(seed_data):
-        log.debug("%s: adding %s bytes of random seed entrophy to %s", name,
+        log.debug("%s: adding %s bytes of random seed entropy to %s", name,
                   len(seed_data), seed_path)
         util.append_file(seed_path, seed_data)
+
+    command = mycfg.get('command', ['pollinate', '-q'])
+    req = mycfg.get('command_required', False)
+    try:
+        handle_random_seed_command(command=command, required=req)
+    except ValueError as e:
+        log.warn("handling random command [%s] failed: %s", command, e)
+        raise e
