@@ -42,9 +42,28 @@ class TestRandomSeed(t_help.TestCase):
     def setUp(self):
         super(TestRandomSeed, self).setUp()
         self._seed_file = tempfile.mktemp()
+        self.unapply = []
+
+        # by default 'which' has nothing in its path
+        self.apply_patches([(util, 'which', self._which)])
+        self.apply_patches([(util, 'subp', self._subp)])
+        self.subp_called = []
+        self.whichdata = {}
 
     def tearDown(self):
+        apply_patches([i for i in reversed(self.unapply)])
         util.del_file(self._seed_file)
+
+    def apply_patches(self, patches):
+        ret = apply_patches(patches)
+        self.unapply += ret
+
+    def _which(self, program):
+        return self.whichdata.get(program)
+
+    def _subp(self, args):
+        self.subp_called.append(tuple(args))
+        return
 
     def _compress(self, text):
         contents = StringIO()
@@ -148,3 +167,51 @@ class TestRandomSeed(t_help.TestCase):
         cc_seed_random.handle('test', cfg, c, LOG, [])
         contents = util.load_file(self._seed_file)
         self.assertEquals('tiny-tim-was-here-so-was-josh', contents)
+
+    def test_seed_command_not_provided_pollinate_available(self):
+        c = self._get_cloud('ubuntu', {})
+        self.whichdata = {'pollinate': '/usr/bin/pollinate'}
+        cc_seed_random.handle('test', {}, c, LOG, [])
+
+        self.assertEquals(self.subp_called, [('pollinate', '-q')])
+
+    def test_seed_command_not_provided_pollinate_not_available(self):
+        c = self._get_cloud('ubuntu', {})
+        self.whichdata = {}
+        cc_seed_random.handle('test', {}, c, LOG, [])
+
+        # subp should not have been called as which would say not available
+        self.assertEquals(self.subp_called, list())
+
+    def test_unavailable_seed_command_and_required_raises_error(self):
+        c = self._get_cloud('ubuntu', {})
+        self.whichdata = {}
+        self.assertRaises(ValueError, cc_seed_random.handle,
+            'test', {'random_seed': {'command_required': True}}, c, LOG, [])
+
+    def test_seed_command_and_required(self):
+        c = self._get_cloud('ubuntu', {})
+        self.whichdata = {'foo': 'foo'}
+        cfg = {'random_seed': {'command_required': True, 'command': ['foo']}}
+        cc_seed_random.handle('test', cfg, c, LOG, [])
+
+        self.assertEquals(self.subp_called, [('foo',)])
+
+    def test_seed_command_non_default(self):
+        c = self._get_cloud('ubuntu', {})
+        self.whichdata = {'foo': 'foo'}
+        cfg = {'random_seed': {'command_required': True, 'command': ['foo']}}
+        cc_seed_random.handle('test', cfg, c, LOG, [])
+
+        self.assertEquals(self.subp_called, [('foo',)])
+
+
+def apply_patches(patches):
+    ret = []
+    for (ref, name, replace) in patches:
+        if replace is None:
+            continue
+        orig = getattr(ref, name)
+        setattr(ref, name, replace)
+        ret.append((ref, name, orig))
+    return ret
